Closed Bug 1752610 Opened 3 years ago Closed 3 years ago

Leakcheck failure from streams/readable-byte-streams/general.any.worker.html

Categories

(Core :: DOM: Streams, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox98 --- fixed

People

(Reporter: saschanaz, Assigned: saschanaz)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Some cycle collection issue, and I have a patch.

I need a magic static analysis check that warns when any of the cycle collectable members are not covered by the CC macro. 🤔

Attachment #9261312 - Attachment description: Bug 1752610 - Cover more members in ReadableaByteStreamController cycle collection r=mgaudet → Bug 1752610 - Part 1: Cover more members in ReadableaByteStreamController cycle collection r=evilpie
Pushed by krosylight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/35e43363d081 Part 1: Cover more members in ReadableaByteStreamController cycle collection r=evilpie https://hg.mozilla.org/integration/autoland/rev/cbcb8e806fb0 Part 2: Cover members in ReadableStreamBYOB* cycle collection r=evilpie
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: