Bug 1752610 - Part 1: Cover more members in ReadableaByteStreamController cycle collection r=evilpie

Differential Revision: https://phabricator.services.mozilla.com/D137330